# shorts-ai

./: Makefile  README.md  main.py  pyproject.toml
src/: agent.py  app.py  bot.py  extractor.py  llms.py  logging_setup.py  quiz.py  scraper.py  settings.py  types.py
src/agents/: quiz_agent.py  schemas.py
src/agents/nodes/: node_concept_extraction.py  node_generate_questions.py  node_plan_steps.py
src/bot/: app.py
src/bot/handlers/: __init__.py  start.py
src/observability/: __init__.py  tracing.py
src/prompts/: extractor_prompts.py
